--- a/views/index.haml
+++ b/views/index.haml
@@ -186,6 +186,8 @@
           }
           else if (response === 'aregistered')
             showMessage('You are already registered in waiting list!');
+          else if (response === 'mt')
+            showMessage('SSO API server under maintenance...');
           else
             showMessage('An unknown error occurred!');
 
