--- a/views/cancel.haml
+++ b/views/cancel.haml
@@ -89,7 +89,7 @@
 
       showMessage('Sending...');
 
-      xmlhttp.open('POST', '/register', true);
+      xmlhttp.open('POST', '/cancel', true);
       xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
       xmlhttp.send('username=' + username +'&password=' + password);
